[gd_scene load_steps=5 format=3 uid="uid://qjgm01quc8it"]

[ext_resource type="Script" path="res://scenes/Scene.gd" id="1_qf38m"]
[ext_resource type="TileSet" uid="uid://moxefdee3n06" path="res://assets/tileset.tres" id="2_5ijo7"]
[ext_resource type="Script" path="res://scenes/objects/room_transition_area.gd" id="3_2i62x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anhal"]
size = Vector2(86.5, 68)

[node name="Room8" type="Node2D"]
z_index = -10
script = ExtResource("1_qf38m")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-64, -32)
tile_set = ExtResource("2_5ijo7")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 131072, 2, 65535, 131072, 2, 131071, 131072, 2, 65537, 131072, 2, 65536, 131072, 2, 131070, 131072, 2, 65534, 131072, 2, 1, 458752, 6, -2, 131072, 2, -1, 131072, 2, -65536, 131072, 2, -65535, 131072, 2, -65534, 131072, 2, -131070, 131072, 2, -131071, 131072, 2, -131072, 131072, 2, -65537, 131072, 2, -65538, 131072, 2, -65539, 131072, 2, -3, 131072, 2, 65533, 262144, 6, 131069, 131072, 2, 65538, 131072, 2, 131074, 131072, 2, 131073, 131072, 2, 196606, 131072, 2, 196605, 131072, 2, 196607, 131072, 2, 131072, 131072, 2, -131075, 131072, 2, -131074, 327680, 5, -131073, 131072, 2, -196608, 131072, 2, -131076, 131072, 2, -65540, 131072, 2, -4, 131072, 2, 65532, 131072, 2, 131068, 131072, 2, 131067, 131072, 2, 196603, 131072, 2, 196604, 262144, 7, 65531, 131072, 2, -5, 131072, 2, -65541, 131072, 2, -131077, 458752, 6, -131068, 0, 5, -65532, 65536, 7, 4, 131072, 2, 65540, 131072, 2, 131076, 131072, 2, 131075, 131072, 2, 65539, 131072, 2, 3, 131072, 2, -65533, 131072, 2, -131069, 65536, 7, -196606, 65536, 7, -196605, 0, 5, -196604, 327680, 2, 196608, 196608, 4, 262143, 131072, 4, 2, 196608, 1, -196607, 196608, 1, 262139, 0, 6, 262140, 196608, 6, 262141, 131072, 7, 327677, 458752, 5, 327676, 393216, 4, 393212, 65536, 4, 393211, 262144, 6, 327675, 458752, 4, 393213, 327680, 2, 393214, 131072, 3, 327678, 458752, 6, 262142, 327680, 6, 327679, 458752, 1, 393215, 0, 7, 327680, 327680, 4, 262144, 0, 6, 262145, 393216, 5, 327681, 65536, 4, 393217, 65536, 4, 393218, 196608, 3, 327682, 131072, 6, 327683, 458752, 3, 262146, 393216, 3, 196609, 458752, 1, 458754, 262144, 5, 458753, 131072, 2, 262147, 262144, 1, 196611, 0, 3, 196610, 131072, 3, 196612, 65536, 6, 196613, 196608, 3, 131077, 196608, 6, 65541, 196608, 1, 5, 327680, 3, -65531, 0, 3, -131067, 196608, 4, -131066, 327680, 7, -131065, 196608, 1, -131064, 196608, 1, -196600, 458752, 5, -196601, 327680, 5, -196602, 131072, 6, -196603, 0, 3, -65528, 262144, 6, 8, 0, 4, 65544, 131072, 6, 131080, 131072, 3, 196616, 65536, 1, 262152, 196608, 3, 327688, 327680, 1, 327687, 65536, 1, 327686, 393216, 1, 327685, 262144, 5, 327684, 458752, 2, 262148, 262144, 2, 196614, 0, 1, 196615, 65536, 6, 262151, 65536, 5, 262150, 327680, 4, 262149, 262144, 6, 131078, 327680, 3, 131079, 327680, 3, 65543, 0, 2, 7, 65536, 1, 65542, 393216, 3, 6, 65536, 1, -65530, 393216, 6, -65529, 458752, 3, -262143, 131072, 4, -262142, 196608, 0, -327679, 196608, 0, -327678, 131072, 4, 9, 262144, 4, 10, 196608, 0, 65546, 262144, 4, 65545, 262144, 0)
layer_1/name = "Objects"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(327674, 262145, 2, 393210, 262145, 2, 262153, 524289, 2, 327689, 524289, 3, 458746, 262145, 4, 458747, 393217, 4, 458748, 393217, 4, 458751, 393217, 4, 393216, 196609, 1, 393219, 65537, 1, 393220, 393217, 4, 393223, 393217, 4, 393224, 393217, 4, 393225, 524289, 4, 262138, 262145, 2, 196617, 524289, 2, 196602, 262145, 2, 131081, 524289, 2, -196614, 262145, 2, -131078, 262145, 2, -65542, 262145, 2, -6, 262145, 2, -196613, 327681, 2, -196612, 393217, 2, -262137, 393217, 2, -262136, 458753, 2, -262135, 524289, 3, -196599, 524289, 2, -131063, 524289, 2, -65527, 524289, 2, -262150, 262145, 1, -262149, 327681, 1, -262148, 393217, 1, -327673, 393217, 1, -327672, 458753, 1, -327671, 524289, 1, -262145, 393217, 1, -196609, 393217, 2, -262147, 393217, 1, -196611, 393217, 2, -262146, 393217, 1, -196610, 393217, 2, -327676, 393217, 1, -262140, 393217, 2, -327675, 393217, 1, -262139, 393217, 2, -327674, 393217, 1, -262138, 393217, 2, -327680, 393217, 1, -327677, 393217, 1, -262141, 393217, 2, -262144, 393217, 2, 393222, 393217, 4, 393221, 393217, 4, 458750, 393217, 4, 458749, 393217, 4, 65530, 262145, 2, 131066, 262145, 2)

[node name="PlayerSpawnTop" type="Marker2D" parent="."]
position = Vector2(3, -100)

[node name="PlayerSpawnRight" type="Marker2D" parent="."]
position = Vector2(199, 3)

[node name="PlayerSpawnDown" type="Marker2D" parent="."]
position = Vector2(3, 139)

[node name="PlayerSpawnLeft" type="Marker2D" parent="."]
position = Vector2(-183, 14)

[node name="TransitionAreaTop" type="Area2D" parent="."]
position = Vector2(2, -162)
script = ExtResource("3_2i62x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionAreaTop"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_anhal")

[node name="TransitionAreaRight" type="Area2D" parent="."]
position = Vector2(274, -2)
script = ExtResource("3_2i62x")
direction = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionAreaRight"]
shape = SubResource("RectangleShape2D_anhal")

[node name="TransitionAreaDown" type="Area2D" parent="."]
position = Vector2(2, 198)
script = ExtResource("3_2i62x")
direction = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionAreaDown"]
shape = SubResource("RectangleShape2D_anhal")

[connection signal="transition_entered" from="TransitionAreaTop" to="." method="_on_transition_area_transition_entered"]
[connection signal="transition_entered" from="TransitionAreaRight" to="." method="_on_transition_area_transition_entered"]
[connection signal="transition_entered" from="TransitionAreaDown" to="." method="_on_transition_area_transition_entered"]
